2002-09-24  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* src/wordseg.cpp:
	Fix segfault in case of unknown file format.
	Nicer "Usage:" handling.
	Remove winlatex, maclatex from Usage:

2002-09-23  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* configure.in:
	Add --enable-debug to allow assertions disabling.

	* configure.in, src/filterlatex.cpp:
	Add --enable-catthai to allow Thai line catenation disabling.
	(temporary solution, may be replaced with command-line option or
	hard-coding later)

2002-09-21  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* configure.in:
	Add missing debian/Makefile in AC_OUTPUT.

2001-12-21  Theppitak Karoonboonyanan <thep@links.nectec.or.th>

	* GNU autotools files:
	Rearrange source tree and apply GNU autotools.

	* Version 0.3.0.
